Inherit popup permission to incognito mode

This changes the popup permission to be inherited to incognito profiles.
While other content settings are not inherited due to security or privacy
concerns, inheriting sites allowed to show popups is save.

Bug: 762349
Change-Id: Ia31f6cea46edf8c705302ee4a414a40a8321756e